<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black">

    <TextView
        android:id="@+id/expression"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginEnd="@dimen/spacing_level_10"
        android:gravity="end"
        android:lines="1"
        android:text=""
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_30" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginEnd="@dimen/spacing_level_10"
        android:gravity="end"
        android:lines="1"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_55" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/clean"
            style="@style/Operators_Button"
            android:text="@string/clean" />

        <TextView
            android:id="@+id/division"
            style="@style/Operators_Button"
            android:text="@string/division" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/number_seven"
            style="@style/Numbers_Button"
            android:text="@string/number_seven" />

        <TextView
            android:id="@+id/number_eight"
            style="@style/Numbers_Button"
            android:text="@string/number_eight" />

        <TextView
            android:id="@+id/number_nine"
            style="@style/Numbers_Button"
            android:text="@string/number_nine" />

        <TextView
            android:id="@+id/multiplication"
            style="@style/Operators_Button"
            android:text="@string/multiplication" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/number_four"
            style="@style/Numbers_Button"
            android:text="@string/number_four" />

        <TextView
            android:id="@+id/number_five"
            style="@style/Numbers_Button"
            android:text="@string/number_five" />

        <TextView
            android:id="@+id/number_six"
            style="@style/Numbers_Button"
            android:text="@string/number_six" />

        <TextView
            android:id="@+id/subtraction"
            style="@style/Operators_Button"
            android:text="@string/subtraction" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/number_one"
            style="@style/Numbers_Button"
            android:text="@string/number_one" />

        <TextView
            android:id="@+id/number_two"
            style="@style/Numbers_Button"
            android:text="@string/number_two" />

        <TextView
            android:id="@+id/number_three"
            style="@style/Numbers_Button"
            android:text="@string/number_three" />

        <TextView
            android:id="@+id/add_up"
            style="@style/Operators_Button"
            android:text="@string/add_up" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ponto"
            style="@style/Numbers_Button"
            android:text="@string/ponto" />

        <TextView
            android:id="@+id/number_zero"
            style="@style/Numbers_Button"
            android:text="@string/number_zero" />

        <ImageView
            android:id="@+id/backspace"
            style="@style/Numbers_Button"
            android:scaleType="center"
            android:src="@drawable/backspace" />

        <TextView
            android:id="@+id/equal"
            style="@style/Operators_Button"
            android:text="@string/equal" />
    </LinearLayout>

</LinearLayout>

